fixed bugs with output

--- a/WebApp/wwwroot/index.html
+++ b/WebApp/wwwroot/index.html
@@ -35,7 +35,7 @@
             <th>Genome</th>
             <th>Organism</th>
         </tr>
-        <tbody id="virues"></tbody>
+        <tbody id="viruses"></tbody>
     </table>
 
     <script src="js/webapp.js" asp-append-version="true"></script>
