--- a/WebApp/wwwroot/disc.html
+++ b/WebApp/wwwroot/disc.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Viruses</title>
-    <link rel="stylesheet" href="css/bootstrap.css"/>
+    <title>Discoveries</title>
+    <link rel="stylesheet" href="css/bootstrap.css" />
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -30,51 +30,50 @@
 
         </div>
     </nav>
-    <h1>Viruses</h1>
-    <h3>Add Virus</h3>
-    <form action="javascript:void(0);" method="POST" onsubmit="addVirus()">
-        <input type="text" id="add-name" class="form-control" placeholder="New Virus">
-        <input type="text" id="add-genome" class="form-control" placeholder="New Genome">
-        <input type="text" id="add-organism" class="form-control" placeholder="New Organism">
+    <h1>Discoveries</h1>
+    <h3>Add Discovery</h3>
+    <form action="javascript:void(0);" method="POST" onsubmit="addDisc()">
+        <input type="text" id="add-vir" class="form-control" placeholder="New Virus">
+        <input type="text" id="add-sci" class="form-control" placeholder="New Scientist">
+        <input type="text" id="add-yea" class="form-control" placeholder="New Year">
         <input type="submit" value="Add" class="btn btn-success">
     </form>
 
     <div>
-        <label class="invalid-feedback" id="add-vn"></label>
-        <label class="invalid-feedback" id="add-vg"></label>
-        <label class="invalid-feedback" id="add-vo"></label>
+        <label class="invalid-feedback" id="add-v"></label>
+        <label class="invalid-feedback" id="add-s"></label>
+        <label class="invalid-feedback" id="add-y"></label>
     </div>
 
-    <div id="editVirus">
+    <div id="editDisc">
         <h3>Edit</h3>
-        <form action="javascript:void(0);" onsubmit="updateVirus()">
-            <input type="hidden" id="edit-id">
-            <input type="text" class="form-control" id="edit-name">
-            <input type="text" class="form-control" id="edit-genome">
-            <input type="text" class="form-control" id="edit-organism">
+        <form action="javascript:void(0);" onsubmit="updateDisc()">
+            <input type="hidden" id="edit-i">
+            <input type="text" class="form-control" id="edit-v">
+            <input type="text" class="form-control" id="edit-s">
+            <input type="text" class="form-control" id="edit-y">
             <input type="submit" value="Save" class="btn btn-info">
         </form>
     </div>
-
     <div>
-        <label class="invalid-feedback" id="ed-vn"></label>
-        <label class="invalid-feedback" id="ed-vg"></label>
-        <label class="invalid-feedback" id="ed-vo"></label>
+        <label class="invalid-feedback" id="ed-v"></label>
+        <label class="invalid-feedback" id="ed-s"></label>
+        <label class="invalid-feedback" id="ed-y"></label>
     </div>
     <p id="counter"></p>
 
     <table>
         <tr>
-            <th>Name</th>
-            <th>Genome</th>
-            <th>Organism</th>
+            <th>Virus</th>
+            <th>Scientist</th>
+            <th>Year</th>
         </tr>
-        <tbody id="viruses"></tbody>
+        <tbody id="discs"></tbody>
     </table>
 
-    <script src="js/webapp.js" asp-append-version="true"></script>
+    <script src="js/virusscientist.js" asp-append-version="true"></script>
     <script type="text/javascript">
-        getViruses();
+        getDisc();
     </script>
 </body>
 </html>
